--- a/index.html
+++ b/index.html
@@ -46,31 +46,31 @@
                     <ul class="lista_item">
                         <li class="item"><a href="paginas/neon.html">
                             <figure>
-                                <img src="imagens/jet.jpg" alt="Jet">
+                                <img src="imagens/neon.png" alt="Valorant: Neon">
                                 <figcaption>
                                     <h4>NEON</h4>
                                 </figcaption>
                             </figure>
                         </a></li>
-                        <li class="item"><a href="#">
+                        <li class="item"><a href="paginas/raze.html">
                             <figure>
-                                <img src="imagens/jet.jpg" alt="Jet">
+                                <img src="imagens/raze.png" alt="Valorant: Raze">
                                     <figcaption>
                                         <h4>RAZE</h4>
                                     </figcaption>
                             </figure>
                         </a></li>
-                        <li class="item"><a href="#">
+                        <li class="item"><a href="paginas/yoru.html">
                             <figure>
-                                <img src="imagens/jet.jpg" alt="Jet">
+                                <img src="imagens/yoru.png" alt="Valorant: Yoru">
                                     <figcaption>
-                                        <h4>CYPHER</h4>
+                                        <h4>YORU</h4>
                                     </figcaption>
                             </figure>
                         </a></li>
-                        <li class="item"><a href="#">
+                        <li class="item"><a href="paginas/gekko.html">
                             <figure>
-                                <img src="imagens/jet.jpg" alt="Jet">
+                                <img src="imagens/gekko.png" alt="Valorant: Gekko">
                                     <figcaption>
                                         <h4>GEKKO</h4>
                                     </figcaption>
@@ -80,7 +80,6 @@
                 </nav>
             </div>
         </div>
-        <div class="espaco"></div>
     </main>
 </body>
 </html>
