--- a/paginas/neon.html
+++ b/paginas/neon.html
@@ -12,45 +12,52 @@
         <div id="menu">
             <nav>
                 <ul class="menu_item">
-                    <li class="item"><a href="#">HOME</a></li>
-                    <li class="item"><a href="#">INTERFACE</a></li>
-                    <li class="item"><a href="#">PERSONAGENS</a></li>
+                    <li class="item"><a href="../index.html">HOME</a></li>
+                    <li class="item"><a href="neon.html">NEON</a></li>
+                    <li class="item"><a href="raze.html">RAZE</a></li>
+                    <li class="item"><a href="yoru.html">YORU</a></li>
+                    <li class="item"><a href="gekko.html">GEKKO</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
+        <div class="titulo">
+            <h1>NEON - DUELISTA</h1>
+        </div>
         <div class="container">
             <div class="imagem">
                 <figure>
-                    <img src="../imagens/jet.jpg" alt="Jet">
+                    <img src="../imagens/neon.png" alt="Campeã - Neon">
                 </figure>
             </div>
             <div class="elemento">
-                <div class="individualidades">
-                    <ul id="lista1">
-                        <li class="habilidades">
-                            <h2>RICOCHETE ELÉTRICO</h2>
-                            <p>INSTANTANEAMENTE arremessa um raio de energia que ricocheteia uma vez. Ao atingir cada superfície, o raio eletrifica o chão abaixo dele com uma explosão.</p>
-                        </li>
-                        <li class="habilidades">
-                            <h2>EQUIPAMENTO VOLTAICO</h2>
-                            <p>INSTANTANEAMENTE canaliza o poder de Neon para receber velocidade aumentada. Ao atingir a carga máxima, use o DISPARO ALTERNATIVO para acionar um deslize elétrico. O carregamento é redefinido a cada dois abates.</p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="individualidades">
-                    <ul id="lista2">
-                        <li class="habilidades">
-                            <h2>salve</h2>
-                            <p>INSTANTANEAMENTE arremessa um raio de energia que ricocheteia uma vez. Ao atingir cada superfície, o raio eletrifica o chão abaixo dele com uma explosão.</p>
-                        </li>
-                        <li class="habilidades">
-                            <h2>opa</h2>
-                            <p>INSTANTANEAMENTE canaliza o poder de Neon para receber velocidade aumentada. Ao atingir a carga máxima, use o DISPARO ALTERNATIVO para acionar um deslize elétrico. O carregamento é redefinido a cada dois abates.</p>
-                        </li>
-                    </ul>
-                </div>
+                <div class="box_itens">
+                    <div class="individualidades">
+                        <ul id="lista1">
+                            <li class="habilidades">
+                                <h2>RICOCHETE ELÉTRICO</h2>
+                                <p>INSTANTANEAMENTE arremessa um raio de energia que ricocheteia uma vez. Ao atingir cada superfície, o raio eletrifica o chão abaixo dele com uma explosão.</p>
+                            </li>
+                            <li class="habilidades">
+                                <h2>EQUIPAMENTO VOLTAICO</h2>
+                                <p>INSTANTANEAMENTE canaliza o poder de Neon para receber velocidade aumentada. Ao atingir a carga máxima, use o DISPARO ALTERNATIVO para acionar um deslize elétrico. O carregamento é redefinido a cada dois abates.</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="individualidades">
+                        <ul id="lista2">
+                            <li class="habilidades">
+                                <h2>salve</h2>
+                                <p>INSTANTANEAMENTE arremessa um raio de energia que ricocheteia uma vez. Ao atingir cada superfície, o raio eletrifica o chão abaixo dele com uma explosão.</p>
+                            </li>
+                            <li class="habilidades">
+                                <h2>opa</h2>
+                                <p>INSTANTANEAMENTE canaliza o poder de Neon para receber velocidade aumentada. Ao atingir a carga máxima, use o DISPARO ALTERNATIVO para acionar um deslize elétrico. O carregamento é redefinido a cada dois abates.</p>
+                            </li>
+                        </ul>
+                    </div> 
+                </div>      
             </div>
         </div>
     </main>
